--- a/BrideyApp/BrideyApp/Views/_ViewImports.cshtml
+++ b/BrideyApp/BrideyApp/Views/_ViewImports.cshtml
@@ -1,8 +1,17 @@
 ﻿@using BrideyApp
 @using BrideyApp.Models
 @using BrideyApp.Helpers
-@using BrideyApp.ViewModels
+@using BrideyApp.ViewModels.About
+@using BrideyApp.ViewModels.Blog
+@using BrideyApp.ViewModels.Cart
+@using BrideyApp.ViewModels.Contact
+@using BrideyApp.ViewModels.Home
+@using BrideyApp.ViewModels.Layout
+@using BrideyApp.ViewModels.Product
+@using BrideyApp.ViewModels.Shop
 @using BrideyApp.ViewModels.Account
+@using BrideyApp.ViewModels.Basket
+@using BrideyApp.ViewModels.Wishlist
 @using Microsoft.AspNetCore.Identity
 @using BrideyApp.Services.Interfaces
 
