--- a/BrideyApp/BrideyApp/Views/Blog/BlogDetail.cshtml
+++ b/BrideyApp/BrideyApp/Views/Blog/BlogDetail.cshtml
@@ -102,8 +102,10 @@
                         }
                   
                     </div>
-                    
-                     <span class="top-respond">Leave a Reply</span>
+                      @if (User.Identity.IsAuthenticated)
+                    {
+
+                        <span class="top-respond">Leave a Comment</span>
                         <p>Your email address will not be published<span>*</span></p>
                         <form method="post" asp-action="PostComment" asp-route-id="@Model.Blog.Id" asp-route-userId="@userManager.Users.FirstOrDefault(u=>u.UserName==User.Identity.Name).Id">
                             <div class="inputs-area">
@@ -114,15 +116,16 @@
                                    size="30" aria-required="true" value="@userManager.Users.FirstOrDefault(u=>u.UserName==User.Identity.Name).Email"
                                    asp-for="BlogCommentVM.Email">
                             </div>
-                            <textarea id="comment" placeholder="Comment"></textarea>
+                            <textarea id="comment" placeholder="Comment" asp-for="BlogCommentVM.Message"></textarea>
                             <div class="comment-form">
-                                <input type="checkbox" asp-for="BlogCommentVM.Message"><label>
+                                <input type="checkbox"><label>
                                     Save my name, email, and website in this browser for the
                                     next time I comment.
                                 </label>
                             </div>
                             <button type="submit">Post Comment</button>
                         </form>
+                    }
                 </div>
                 <div class="col-lg-4 col-sm-12 col-md-12">
                     <div class="categories-2" style="height:231px">
