--- a/BrideyApp/BrideyApp/Views/Shared/_ProductsPartial.cshtml
+++ b/BrideyApp/BrideyApp/Views/Shared/_ProductsPartial.cshtml
@@ -40,8 +40,14 @@
                 <ul>
                     <li><a><i class="fa-solid fa-eye"></i></a></li>
                     <li><a><i class="fa-regular fa-heart"></i></a></li>
-                    <li><a><i class="fa-solid fa-basket-shopping"></i></a></li>
-
+                    @if (User.Identity.IsAuthenticated)
+                    {
+                        <li><a class="add-to-cart-icon" data-id="@product.Id"><i class="fa-solid fa-basket-shopping"></i></a></li>
+                    }
+                    else
+                    {
+                        <li><a asp-controller="Account" asp-action="Index"><i class="fa-solid fa-basket-shopping"></i></a></li>
+                    }
                 </ul>
             </div>
         </div>
