--- a/BrideyApp/BrideyApp/Views/Blog/BlogDetail.cshtml
+++ b/BrideyApp/BrideyApp/Views/Blog/BlogDetail.cshtml
@@ -5,7 +5,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Marcellus&display=swap" rel="stylesheet">
 }
 <main>
-    <section id="wrapper-blogDetail" style="background-image: url('/assets/images/@Model.SectionBackgroundImages["BasicSmallBackgroundImage"]');">
+    <section id="wrapper-blogDetail" style="background-image: url('/assets/images/@Model.SectionBackgroundImages["BasicSmallBackgroundImage"]')">
         <div class="container page_text">
             <h1 style="margin-bottom: 25px;">Blog Detail</h1>
             <ul>
@@ -84,7 +84,7 @@
 
                                     <div id="div-comment-5" class="comment-content">
                                         <div class="commentmetadata">
-                                            <span>>@item.Name</span>
+                                            <span>@item.Name</span>
                                             <span class="date">@item.CreatedDate.ToString("dd MMMM yyyy")</span>
                                         </div>
 
@@ -175,34 +175,16 @@
     <section id="footer-top-blog-detail">
         <div class="container">
             <div class="row">
-                <div class="col-lg-3 col-sm-12 col-md-3 col-12">
-                    <div class="service-item">
-                        <img src="~/assets/images/service-1.png">
-                        <span class="title">Free Shipping </span>
-                        <p>Once receiving your order, we will turn your products around in 3-5 business days.</p>
+                @foreach (var advertising in Model.Advertisings)
+                {
+                    <div class="col-lg-3 col-sm-12 col-12 col-md-3">
+                        <div class="service-item">
+                            <img src="~/assets/images/@advertising.Image">
+                            <span class="title">@advertising.Name</span>
+                            <p>@advertising.Description</p>
+                        </div>
                     </div>
-                </div>
-                <div class="col-lg-3 col-sm-12 col-md-3 col-12">
-                    <div class="service-item">
-                        <img src="~/assets/images/service-2.png">
-                        <span class="title">Free Shipping </span>
-                        <p>We accept returns for freshly purchased products within 7 days from the payment.</p>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-sm-12 col-md-3 col-12">
-                    <div class="service-item">
-                        <img src="~/assets/images/service-3.png">
-                        <span class="title">Custom Sizing</span>
-                        <p>Order your dress with free custom sizing.</p>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-sm-12 col-md-3 col-12">
-                    <div class="service-item">
-                        <img src="~/assets/images/service-4.png">
-                        <span class="title">Superb Quality</span>
-                        <p>We make commitments that the quality of our products will and always will be superb.</p>
-                    </div>
-                </div>
+                }
             </div>
         </div>
     </section>
