--- a/BrideyApp/BrideyApp/Views/Cart/Index.cshtml
+++ b/BrideyApp/BrideyApp/Views/Cart/Index.cshtml
@@ -27,7 +27,7 @@
                 <div class="table-products">
                      @if (Model.Count > 0)
                     {
-                        <table class="table">
+                        <table class="table product-table">
                             <thead>
                                 <tr>
                                     <th scope="col">Product</th>
@@ -48,9 +48,9 @@
                                     <td>@item.Name</td>
                                         <td><span>$</span> <span>@item.Price.ToString("0.00")</span></td>
                                     <td>
-                                        <button class="minus"><i class="fa-solid fa-minus"></i></button>
+                                            <button class="minus dec"><i class="fa-solid fa-minus"></i></button>
                                             <input value="@item.Count" type="text" disabled="">
-                                        <button class="plus"><i class="fa-solid fa-plus "></i></button>
+                                            <button class="plus inc"><i class="fa-solid fa-plus "></i></button>
                                     </td>
                                         <td class="price"><span>$</span><span>@item.Total.ToString("0.00")</span> </td>
                                     <td><i class="fa-solid fa-x delete-icon"></i></td>
