--- a/BrideyApp/BrideyApp/Views/Shop/Index.cshtml
+++ b/BrideyApp/BrideyApp/Views/Shop/Index.cshtml
@@ -53,12 +53,13 @@
                     <div class="sort-result">
                         <p>Showing <span>@Model.PaginateDatas.CurrentPage–@Model.PaginateDatas.TotalPage</span> of <span>@Model.PaginateDatas.Datas.Count()</span>   results</p>
                     </div>
-                    <select class="form-select" aria-label="Default select example">
-                        <option selected>Sort By Latest</option>
-                        <option value="1">Sort By Popularity</option>
-                        <option value="2">Sort By Avarage Rating</option>
-                        <option value="3">Sort By Price:Low To High</option>
-                        <option value="4">Sort By Price:High to Low</option>
+                    <select id="sort"name="value" class="form-select" aria-label="Default select example">
+                        <option value="0" selected>Sort By Default</option>
+                        <option value="1">Sort By Latest</option>
+                        <option value="2">Sort By Popularity</option>
+                        <option value="3">Sort By Avarage Rating</option>
+                        <option value="4">Sort By Price:Low To High</option>
+                        <option value="5">Sort By Price:High to Low</option>
                     </select>
                 </div>
 
@@ -96,38 +97,40 @@
                                 }
                             </ul>
                         </div>
-                        <div class="product-area">
-                            <div class="price-title">
-                                <h3>FILTER BY PRICE</h3>
-                            </div>
-                            <div class="price-filter">
-                                <div class="card">
-
-                                    <div class="range-slider">
-                                        <input type="range" class="min-price" value="100" min="10" max="500"
-                                               step="10" style="accent-color: #d8d8d8;">
-                                        <input type="range" class="max-price" value="250" min="10" max="500"
-                                               step="10" style="accent-color: #d8d8d8;">
-                                    </div>
-                                    <div class="price-content">
-
-                                        <div style="color: gray;">
-                                            <p>Price:</p>
+                        <form id="filterForm" asp-controller="shop" asp-action="GetRangeProducts" method="get">
+                            <div class="product-area">
+                                <div class="price-title">
+                                    <h3>FILTER BY PRICE</h3>
+                                </div>
+                                <div class="price-filter">
+                                    <div class="card">
+                                        <div class="range-slider">
+                                            <input name="value1" type="range" class="min-price" value="100" min="10" max="500"
+                                                   step="10" style="accent-color: #d8d8d8;">
+                                            <input name="value2" type="range" class="max-price" value="250" min="10" max="500"
+                                                   step="10" style="accent-color: #d8d8d8;">
                                         </div>
-                                        <div>
-                                            <p id="min-value">50</p>
-                                        </div>
+                                        <div class="price-content">
 
-                                        <div>
-                                            <p id="max-value">500</p>
-                                        </div>
-                                        <div class="filter-button">
-                                            <button>FILTER</button>
+                                            <div style="color: gray;">
+                                                <p>Price:</p>
+                                            </div>
+                                            <div>
+                                                <p id="min-value">50</p>
+                                            </div>
+
+                                            <div>
+                                                <p id="max-value">500</p>
+                                            </div>
+                                            <div class="filter-button">
+                                                <button type="submit">FILTER</button>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
                             </div>
-                        </div>
+                        </form>
+                     
                         <div class="widget-title-holder">
                             <h5>Colors</h5>
                             <ul>
@@ -226,7 +229,6 @@
                     <div class="row productss-area">
                      <partial name="_ProductsPartial" model="Model.PaginateDatas" />
                     </div>
-           
                 </div>
             </div>
         </div>
